Ensure publication exists before persisting ticket (#2569)
**Problem**

Publications created via import
(CreatePublicationFromImportCandidateHandler) were sometimes missing
their files when a FilesApprovalThesis ticket was created immediately
afterward. The root cause traces back to how ticket creation verified
the associated publication existed.

`TicketService#createTicket` previously re-fetched the publication
itself as a safety check before creating the ticket:
```
private Publication fetchPublicationToEnsureItExists(TicketEntry ticketEntry) {
  return attempt(
          () -> resourceService.getPublicationByIdentifier(ticketEntry.getResourceIdentifier()))
      .orElseThrow();
}
```

**Fix**
`TicketEntry#persistNewTicket` and `TicketService#createTicket` now take
the Publication as an explicit parameter instead of re-fetching it.
Callers pass the publication they already have (e.g. the one just
created/updated in the same request), removing the redundant,
eventually-consistent lookup entirely.

`TicketDao#publicationExistsConditionCheck` adds a `ConditionCheck
(attribute_exists(PK0) AND attribute_exists(SK0)) `against the
publication, included in the ticket's TransactWriteItems call. This
guarantees atomically, at the base-table level, that the publication
genuinely exists before the ticket is persisted.